# agent

./: .gitignore  AGENT_SKILLS_FAILURE_REPORT.md  DESIGN_v1_DRAFT.md  MAINTAINERS.md  POWER.md  README.md  agent.py  cases.md  claude_desktop_config.example.json  design.md  mcp_server.py  opensearch_qa_assistant.py  opensearch_semantic_search_guide.md  orchestrator.py  planning_session.py  power.json  prompt.md  pyproject.toml  readme.md  sample_agent.py  sample_agent_stream.py  semantic_search_expert_assistant.py  solution_planning_assistant.py  tech_selection_worker.py  worker.py
.claude/skills/opensearch-search-builder/: SKILL.md
.claude/skills/opensearch-search-builder/references/: aws-domain-01-provision.md  aws-domain-02-deploy-search.md  aws-domain-03-agentic-setup.md  aws-reference.md  aws-serverless-01-provision.md  aws-serverless-02-deploy-search.md
.cursor/: mcp.json
.cursor/rules/: opensearch-workflow.mdc
.github/: CODEOWNERS
.github/workflows/: release-drafter.yml
.kiro/settings/: mcp.json
.kiro/settings/steering/: opensearch-workflow.md
.kiro/specs/opensearch-kiro-power/: requirements.md
kiro-power/: POWER.md  mcp.json
kiro-power/steering/: aws-opensearch-domain.md  aws-opensearch-serverless.md  opensearch-workflow.md
kiro/opensearch-launchpad/: POWER.md
opensearch_orchestrator/: __init__.py  mcp_server.py  opensearch_ops_tools.py  opensearch_qa_assistant.py  orchestrator.py  orchestrator_engine.py  planning_session.py  solution_planning_assistant.py  worker.py
opensearch_orchestrator/scripts/: __init__.py  opensearch_ops_tools.py  shared.py  tools.py  ui_server_standalone.py
opensearch_orchestrator/scripts/ui/search_builder/: app.jsx  styles.css
scripts/: handler.py  opensearch_ops_tools.py  shared.py  tools.py  ui_server_standalone.py
scripts/knowledge/: dense_vector_models.md  opensearch_semantic_search_guide.md
scripts/ui/search_builder/: app.jsx  index.html  styles.css
strands_examples/: sample_agent_stream.py
tests/: test_capability_examples_from_candidate_docs.py  test_local_path_sample_loading.py  test_local_pretrained_model_fault_tolerance.py  test_mapping_type_guardrails.py  test_mcp_advanced_tool_gate.py  test_mcp_manual_execution_flow.py  test_mcp_planner_manual_fallback.py  test_mcp_stdio_disconnect_handling.py  test_opensearch_docker_recovery.py  test_orchestrator_additional_requirements_defaults.py  test_orchestrator_engine_workflow_it.py  test_orchestrator_hybrid_weight_profile.py  test_orchestrator_index_selection.py  test_orchestrator_model_deployment_choice.py  test_orchestrator_prefix_wildcard_preference.py  test_planning_session_retry_guard.py  test_resource_recreate_behavior.py  test_search_ui_query_routing.py  test_shared_single_choice_input.py  test_solution_planning_hybrid_selection.py  test_thinking_callback_handler_streams.py  test_worker_hybrid_weight_parsing.py
