[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensearch-orchestrator"
version = "0.1.0"
description = "OpenSearch Solution Architect MCP server — guides you from requirements to a running search setup"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "opensearch", "search", "vector-search", "hybrid-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp",
    "opensearch-py",
    "strands-agents",
]

[project.urls]
Homepage = "https://github.com/SearchLearning/agent"
Repository = "https://github.com/SearchLearning/agent"
Issues = "https://github.com/SearchLearning/agent/issues"

[project.scripts]
opensearch-orchestrator = "opensearch_orchestrator.mcp_server:main"

[tool.hatch.build]
include = [
    "opensearch_orchestrator/**/*.py",
    "opensearch_orchestrator/scripts/knowledge/*.md",
    "opensearch_orchestrator/scripts/sample_data/*",
    "opensearch_orchestrator/scripts/ui/search_builder/*",
    "readme.md",
]

[tool.hatch.build.targets.wheel]
packages = ["opensearch_orchestrator"]

[tool.hatch.build.targets.sdist]
include = [
    "opensearch_orchestrator/**/*.py",
    "opensearch_orchestrator/scripts/knowledge/*.md",
    "opensearch_orchestrator/scripts/sample_data/*",
    "opensearch_orchestrator/scripts/ui/search_builder/*",
    "tests/**/*.py",
    "readme.md",
    "pyproject.toml",
]
