[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensearch-launchpad"
version = "0.1.2"
description = "OpenSearch Solution Architect MCP server — guides you from requirements to a running search setup"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
license-files = ["LICENSE.txt", "NOTICE.txt"]
keywords = ["mcp", "opensearch", "search", "vector-search", "hybrid-search"]

dependencies = [
    "anyio",
    "mcp",
    "opensearch-py",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "strands-agents",
]

[project.optional-dependencies]
cli = [
    "prompt-toolkit",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/opensearch-project/opensearch-launchpad"
Repository = "https://github.com/opensearch-project/opensearch-launchpad"
Issues = "https://github.com/opensearch-project/opensearch-launchpad/issues"

[project.scripts]
opensearch-launchpad = "opensearch_orchestrator.mcp_server:main"

[tool.hatch.build]
include = [
    "opensearch_orchestrator/**/*.py",
    "opensearch_orchestrator/knowledge/*.md",
    "opensearch_orchestrator/sample_data/*",
    "opensearch_orchestrator/ui/search_builder/*",
    "readme.md",
]

[tool.hatch.build.targets.wheel]
packages = ["opensearch_orchestrator"]

[tool.hatch.build.targets.sdist]
include = [
    "opensearch_orchestrator/**/*.py",
    "opensearch_orchestrator/knowledge/*.md",
    "opensearch_orchestrator/sample_data/*",
    "opensearch_orchestrator/ui/search_builder/*",
    "tests/**/*.py",
    "readme.md",
    "pyproject.toml",
]
